<resources>
    <string name="app_name">GdzieJestes</string>
    <string name="create_one">Nie masz jeszcze konta? Stwórz je!</string>
    <string name="password">Haslo</string>
    <string name="email">Email</string>
    <string name="login">Zaloguj</string>
    <string name="already_account">Juz masz konto? Zaloguj</string>
    <string name="register">Zarejestruj się</string>
    <string name="name">Imie</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_add_friend">dodaj znajomego</string>
    <string name="friend_list">lista znajomych</string>
    <string name="settings">ustawienia</string>
    <string name="passwordRepeat">Powtórz hasło</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="therms_of_use">Akceptuję regulamin serwisu, którego wcale nie przeczytałem i raczej czytać nie będę ale i tak i tak akceptuję tym samym zgadzając się na przetwarzanie moich danych osobowych, które tu podaje oraz na udostępnienie mojej lokalizacji.</string>
    <string name="logout">wyloguj</string>
    <string name="dodaj">Dodaj</string>
    <string name="refresh">odśwież</string>
    <string name="logowanie">Logowanie:</string>
    <string name="rejstracja">Rejstracja:</string>
    <string name="update_data">zachowaj zmiany</string>
    <string name="register2">Rejstracja użytkownika</string>
    <string name="change_password">nowe hasło</string>
    <string name="password_old">Stare hasło</string>
    <string name="password_new">Nowe hasło</string>
    <string name="password_new_repeat">Powtórz nowe hasło</string>
    <string name="password_check">Przejdź do zmiany ustawień</string>
    <string name="email_new">Nowy email</string>
    <string name="displayName">Wyświetlany pesudonim</string>
</resources>
