<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gdziejestes.ui.SettingsActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/activity_settings_bg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/settings"
                android:textAllCaps="true"
                android:textColor="@color/secondary_text"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignBottom="@id/activity_settings_bg"
            android:background="@color/divider" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout2"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="24dp">




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/activity_settings_etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_new"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/activity_settings_EtPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_new_repeat"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/activity_settings_etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_new"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/activity_settings_etDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/displayName"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:orientation="vertical"
        android:padding="12dp">

        <Button
            android:id="@+id/activity_register_btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondary_text"
            android:text="@string/update_data"
            android:textColor="@color/icons"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>
